--- a/src/components/Game.css
+++ b/src/components/Game.css
@@ -69,7 +69,7 @@ html, body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-image: url('./assets/skillscroll.webp');
+  background-image: url('./assets/skillscroll.png');
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
