--- a/src/components/Game.css
+++ b/src/components/Game.css
@@ -86,15 +86,15 @@ html, body {
   padding: 1rem;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   overflow: hidden;
   font-family: 'morrisromanblack';
   font-size: 3rem;
 }
 .skills-dialogue h3 {
-  margin-top: 20%;
-  font-size: clamp(0.7rem, 2vw, 1rem);
+  margin-top: 5%;
+  font-size: clamp(1.5rem, 2vw, 1.7rem);
   margin-bottom: 0.5rem;
   font-family: 'CELTG';
 }
@@ -107,8 +107,8 @@ html, body {
 }
 .skills-dialogue li {
   margin: 0.4rem 0;
-  font-size: clamp(0.5rem, 1.5vw, 0.8rem);
-  line-height: 1.3;
+  font-size: clamp(1.2rem, 1.5vw, 1.5rem);
+  line-height: 0.9;
 }
 
 /* Controls */
@@ -306,7 +306,7 @@ html, body {
   }
   
   .skills-dialogue h3 {
-    margin-top: 18%;
+    margin-top: 5%;
   }
   
   .skills-dialogue ul {
@@ -324,7 +324,7 @@ html, body {
   }
   
   .skills-dialogue h3 {
-    margin-top: 15%;
+    margin-top: 5%;
   }
   
   .skills-dialogue ul {
