--- a/src/components/Game.css
+++ b/src/components/Game.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Rye&display=swap");
 @font-face {
   font-family: 'CELTG';
   src: url('/assets/fonts/CELTG.TTF') format('truetype');
@@ -53,7 +54,7 @@ html, body {
 }
 
 /* Dialogue styles */
-.dialogue-box, .github-dialogue, .knife-dialogue {
+.dialogue-box, .knife-dialogue {
   position: fixed;
   top: 50%;
   left: 50%;
@@ -67,6 +68,44 @@ html, body {
   z-index: 1001;
   font-size: 0.75rem;
   text-align: center;
+}
+.github-dialogue{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-image: url('/assets/work bench.png');
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 400px;
+  height: 200px;
+  max-width: 90vw;
+  max-height: 90vh;
+  aspect-ratio: 2/1;
+  color: #EDE0D4;
+  padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: 'rye';
+}
+.github-head{
+  font-size: 2rem;
+  opacity: 0.8;
+  text-shadow: #000;
+}
+.github-cont{
+  font-size: 1.5rem;
+  margin-top: 5%;
+  opacity: 0.8;
+  text-shadow: #000;
+}
+.github-afterthought{
+  font-size: 1.2rem;
+  margin-top: 7%;
+  opacity: 0.7;
+  text-shadow: #000;
 }
 .skills-dialogue {
   position: fixed;
