--- a/src/components/Game.css
+++ b/src/components/Game.css
@@ -61,7 +61,7 @@ html, body {
   transform: translate(-50%, -50%);
   background-color: #000;
   border: 4px solid #fff;
-  box-shadow: 0 0 10px rgba(0,0,0,0.9);
+  box-shadow: 0px 0px 30px 0px rgb(255, 255, 255);
   color: #fff;
   padding: 1rem;
   width: min(90%, 450px);
@@ -382,7 +382,7 @@ html, body {
 /* Update NPC dialogue styles */
 .npc-dialogue {
   background-color: #000;
-  border: 4px solid #483C32;
+  border: 4px solid #ffffff;
   max-width: 400px;
   padding: 1.5rem;
 }
